--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/mango_pom.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mango Pomelo Labs - Pioneering Safe, Adaptive AGI Research</title>
   </head>
